--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,33 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Daniela und Jacob - Hochzeit</title>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= csrf_meta_tags %>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Garamond:wght@400;700&family=Futura:wght@400&display=swap');
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: 'Garamond', serif;
-        background: url('/assets/background.jpg') no-repeat center center fixed;
-        background-size: cover;
-        color: #7b4d35;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        text-align: center;
-      }
-      .coming-soon {
-        font-size: 3rem;
-        font-weight: bold;
-        color: #c7b03e;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="coming-soon">Coming Soon</div>
-  </body>
-</html>
+<!-- app/views/home/index.html.erb -->
+
+<div class="content">
+  <div class="coming-soon">coming soon...</div>
+  <div class="event-details">
+    <div class="names"><span>D</span>aniela und <span>J</span>acob</div>
+    <div class="date">12. Oktober 2024</div>
+    <div class="location">Südtirol</div>
+  </div>
+</div>
