--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -21,7 +21,7 @@ body {
   align-items: flex-start; /* Start at the top */
   height: 100vh;
   text-align: center;
-  padding-top: 20vh; /* Adjust padding to move content down */
+  padding-top: 15vh; /* Adjust padding to move content down */
 }
 
 /* Stil für den gesamten Inhalt */
@@ -32,10 +32,10 @@ body {
   padding: 1rem;
 
   .coming-soon {
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
     color: $color-secondary;
-    margin-bottom: 1rem;
+    margin-bottom: 6rem;
 
     @media (max-width: 768px) {
       font-size: 2.5rem;
@@ -48,8 +48,11 @@ body {
 
   .event-details {
     .names {
-      font-size: 2.5rem;
+      font-size: 2rem;
+      font-weight: extra-light;
       color: $color-primary;
+      letter-spacing: 0.5rem;
+      margin-bottom: 2rem;
 
       span {
         font-size: 3rem; // Größerer Buchstabe
@@ -59,7 +62,8 @@ body {
         font-size: 2rem;
 
         span {
-          font-size: 2.5rem;
+          font-size: 2rem;
+          letter-spacing: 0.4rem;
         }
       }
 
@@ -68,12 +72,13 @@ body {
 
         span {
           font-size: 2rem;
+          letter-spacing: 0.4rem;
         }
       }
     }
 
     .date {
-      font-size: 2rem;
+      font-size: 1.5rem;
       color: $color-primary;
       margin-top: 0.5rem;
 
