--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 <div class="content">
   <div class="coming-soon">coming soon...</div>
   <div class="event-details">
-    <div class="names"><span>D</span>aniela und <span>J</span>acob</div>
+    <div class="names"><span>D</span>ANIELA & <span>J</span>ACOB</div>
     <div class="date">12. Oktober 2024</div>
     <div class="location">Südtirol</div>
   </div>
