--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,9 +14,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Garamond', serif;
-  background: image-url('background.png') no-repeat center bottom;
+  background: image-url('Weinberge_mob2.png') no-repeat center bottom;
   background-size: cover;
-  background-position: center -150%;
+  background-position: center bottom;
   color: $color-primary;
   display: flex;
   justify-content: center;
@@ -29,15 +29,14 @@ body {
 @media (max-width: 768px) {
   body {
     background-size: contain;
-    background-position: center -250%;
+    background-position: center bottom;
   }
 }
 
 @media (max-width: 480px) {
   body {
-    background: image-url('Weinberge_mob.png') no-repeat center bottom;
     background-size: contain;
-    background-position: center -250%;
+    background-position: center bottom;
   }
 }
 
