--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <!-- app/views/home/index.html.erb -->
-
+<div class="background-container"></div>
 <div class="content">
   <div class="coming-soon">coming soon...</div>
   <div class="event-details">
