--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,9 +14,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Garamond', serif;
-  /*background: image-url('Weinberge_mob.png') no-repeat center bottom;
-  background-size: 100% 50%;*/
-/*  background-position: center bottom;*/
+  background: image-url('Weinberge_mob2.png') no-repeat center bottom;
+  background-size: cover;
+  background-position: center bottom;
   color: $color-primary;
   display: flex;
   justify-content: center;
@@ -26,28 +26,17 @@ body {
   padding-top: 15vh;
 }
 
-
-.background-container {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 50%; /* Hintergrundbild nimmt die untere Hälfte des Bildschirms ein */
-  background: url('background.png') no-repeat center bottom;
-  background-size: cover; /* Bild wird proportional skaliert und füllt den Container */
-}
-
 @media (max-width: 768px) {
-  .background-container {
-    background: url('background-mobile.png') no-repeat center bottom;
-    background-size: cover; /* Bild wird proportional skaliert und füllt den Container */
+  body {
+    background-size: contain;
+    background-position: center bottom;
   }
 }
 
 @media (max-width: 480px) {
-  .background-container {
-    background: url('background-mobile.png') no-repeat center bottom;
-    background-size: cover; /* Bild wird proportional skaliert und füllt den Container */
+  body {
+    background-size: contain;
+    background-position: center bottom;
   }
 }
 
