--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,29 +14,41 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Garamond', serif;
-  background: image-url('Weinberge_mob2.png') no-repeat center bottom;
-  background-size: cover;
+  background: image-url('background.png') no-repeat center bottom;
+  background-size: 100% 50%;
   background-position: center bottom;
-  color: $color-primary;
+/*  color: $color-primary;*/
   display: flex;
   justify-content: center;
   align-items: flex-start;
   height: 100vh;
   text-align: center;
   padding-top: 15vh;
+  position: relative;
+  overflow: hidden; /* Verhindert Scrollen */
+}
+
+.background-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50%; /* Hintergrundbild nimmt maximal die untere Hälfte des Bildschirms ein */
+  background: url('background.png') no-repeat center bottom;
+  background-size: 100% 50%; /* Bild wird auf 100% der Breite und 50% der Höhe skaliert */
 }
 
 @media (max-width: 768px) {
-  body {
-    background-size: contain;
-    background-position: center bottom;
+  .background-container {
+    background: url('background-mobile.png') no-repeat center bottom;
+    background-size: 100% 50%; /* Bild wird auf 100% der Breite und 50% der Höhe skaliert */
   }
 }
 
 @media (max-width: 480px) {
-  body {
-    background-size: contain;
-    background-position: center bottom;
+  .background-container {
+    background: url('background-mobile.png') no-repeat center bottom;
+    background-size: 100% 50%; /* Bild wird auf 100% der Breite und 50% der Höhe skaliert */
   }
 }
 
