--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,16 +14,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Garamond', serif;
-  background: image-url('background.png') no-repeat center bottom;
-  background-size: 100% 50%;
-  background-position: center bottom;
-/*  color: $color-primary;*/
+  color: $color-primary;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   height: 100vh;
   text-align: center;
-  padding-top: 15vh;
+  padding-top: 15vh; /* Adjust padding to move content down */
   position: relative;
   overflow: hidden; /* Verhindert Scrollen */
 }
