--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,7 +14,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Garamond', serif;
-  color: $color-primary;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -29,8 +28,8 @@ body {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
-  height: 50%; /* Hintergrundbild nimmt maximal die untere Hälfte des Bildschirms ein */
+  width: 100vh;
+  height: 50vh; /* Hintergrundbild nimmt maximal die untere Hälfte des Bildschirms ein */
   background: url('background.png') no-repeat center bottom;
   background-size: 100% 50%; /* Bild wird auf 100% der Breite und 50% der Höhe skaliert */
 }
