--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,37 +14,29 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Garamond', serif;
+  background: image-url('background.png') no-repeat center bottom;
+  background-size: 100% 50%;
+  background-position: center bottom;
+  color: $color-primary;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   height: 100vh;
   text-align: center;
-  padding-top: 15vh; /* Adjust padding to move content down */
-  position: relative;
-  overflow: hidden; /* Verhindert Scrollen */
-}
-
-.background-container {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100vh;
-  height: 50vh; /* Hintergrundbild nimmt maximal die untere Hälfte des Bildschirms ein */
-  background: url('background.png') no-repeat center bottom;
-  background-size: 100% 50%; /* Bild wird auf 100% der Breite und 50% der Höhe skaliert */
+  padding-top: 15vh;
 }
 
 @media (max-width: 768px) {
-  .background-container {
-    background: url('background-mobile.png') no-repeat center bottom;
-    background-size: 100% 50%; /* Bild wird auf 100% der Breite und 50% der Höhe skaliert */
+  body {
+    background-size: 70% 50%;
+    background-position: center bottom;
   }
 }
 
 @media (max-width: 480px) {
-  .background-container {
-    background: url('background-mobile.png') no-repeat center bottom;
-    background-size: 100% 50%; /* Bild wird auf 100% der Breite und 50% der Höhe skaliert */
+  body {
+    background-size: 70% 50%;
+    background-position: center bottom;
   }
 }
 
