--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,7 +14,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Garamond', serif;
-  background: image-url('background.png') no-repeat center bottom;
+  background: image-url('Weinberge_mob.png') no-repeat center bottom;
   background-size: 100vh 50vh;
   background-position: center bottom;
   color: $color-primary;
