--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -15,7 +15,7 @@ body {
   padding: 0;
   font-family: 'Garamond', serif;
   background: image-url('Weinberge_mob.png') no-repeat center bottom;
-  background-size: 100vh 50vh;
+  background-size: 100% 50vh;
   background-position: center bottom;
   color: $color-primary;
   display: flex;
