--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -15,8 +15,7 @@ body {
   padding: 0;
   font-family: 'Garamond', serif;
   background: image-url('Weinberge_mob.png') no-repeat center bottom;
-  background-size: 100% 50vh;
-  background-position: center bottom;
+  background-position: center -250%;
   color: $color-primary;
   display: flex;
   justify-content: center;
