--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,9 +14,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Garamond', serif;
-  background: image-url('Weinberge_mob.png') no-repeat center bottom;
+  background: image-url('Weinberge_mob.png') no-repeat center;
   background-size: cover;
-  background-position: center -250%;
+  background-position: center -450%;
   color: $color-primary;
   display: flex;
   justify-content: center;
