--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,7 +14,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Garamond', serif;
-  background: image-url('Weinberge_mob.png') no-repeat center;
+  background: image-url('background.png') no-repeat center;
   background-size: cover;
   background-position: center -450%;
   color: $color-primary;
@@ -66,6 +66,7 @@ body {
 
       @media (max-width: 768px) {
         font-size: 1.5rem;
+        margin-bottom: 6rem;
 
         span {
           font-size: 2.2rem;
@@ -75,6 +76,7 @@ body {
 
       @media (max-width: 480px) {
         font-size: 1rem;
+        marrgin-bottom: 6rem;
 
         span {
           font-size: 1.5rem;
