--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <!-- app/views/home/index.html.erb -->
-<div class="background-container"></div>
+<div class="background-container">
 <div class="content">
   <div class="coming-soon">coming soon...</div>
   <div class="event-details">
@@ -7,4 +7,5 @@
     <div class="date">12. Oktober 2024</div>
     <div class="location">Südtirol</div>
   </div>
+</div>
 </div>
