--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -31,7 +31,7 @@ body {
 
 
 .background-container {
-  background: image-url('background.png') center;
+  background: image-url('background.jpg') center;
   background-size: cover;
   position: absolute;
   top: 30vh;
