--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -20,21 +20,14 @@ body {
   align-items: flex-start;
   text-align: center;
   height: 100vh;
-  overflow: hidden;
-/*  padding-top: 15vh;*/
-
-/* Hintergundbild */
-  /*background: image-url('background.png') no-repeat center bottom;
-  background-size: cover;
-  background-position: center bottom;*/
+/*  overflow: hidden;*/
 }
-
 
 .background-container {
   background: image-url('background.jpg') center;
   background-size: cover;
   position: absolute;
-  top: 30vh;
+  top: 50vh;
   left: 0;
   width: 100vw;
   height: 100vh;
@@ -47,6 +40,9 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 1rem;
+   margin: auto;
+  z-index: 2;
+  padding-bottom: 5rem;
 
   .coming-soon {
     font-family: 'Garamond', serif;
@@ -57,13 +53,13 @@ body {
     margin-bottom: 7rem;
     letter-spacing: 0.4rem;
 
-    @media (max-width: 768px) {
+   /* @media (max-width: 768px) {
       font-size: 2rem;
     }
 
     @media (max-width: 480px) {
       font-size: 1.5rem;
-    }
+    }*/
   }
 
   .event-details {
