--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,7 +13,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Garamond', serif;
-  background: image-url('background.png') no-repeat center;
+  background: image-url('background.jpg') no-repeat center;
   background-size: cover;
   background-position: center bottom;
   color: $color-primary;
