--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -27,6 +27,7 @@ body {
 
 @media (max-width: 768px) {
   body {
+    padding-top: 40vh;
     background-size: contain; /* Bild in voller Breite anzeigen und proportional skalieren */
     background-position: center bottom; /* Positionierung des Bildes unten */
     min-height: 100vh; /* Anpassen für Tablets und kleinere Bildschirme */
@@ -35,9 +36,9 @@ body {
 
 @media (max-width: 480px) {
   body {
+    padding-top: 40vh;
     background-size: contain; /* Bild in voller Breite anzeigen und proportional skalieren */
     background-position: center bottom; /* Positionierung des Bildes unten */
-
     min-height: 100vh; /* Anpassen für Smartphones */
   }
 }
