--- a/app/assets/stylesheets/config/fonts.scss
+++ b/app/assets/stylesheets/config/fonts.scss
@@ -11,3 +11,5 @@
   font-weight: 300;
   font-style: normal;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Garamond:wght@400;700&family=Futura:wght@400&display=swap');
