--- a/app/assets/stylesheets/config/colors.scss
+++ b/app/assets/stylesheets/config/colors.scss
@@ -1,3 +1,4 @@
-/* Farbvariablen */
 $color-primary: #7b4d35;
 $color-secondary: #c7b03e;
+$color-tertiary: #776f4b; // Falls du bereits eine dritte Farbe hast
+$color-quaternary: #b1804d; // Die neue Farbe
