--- a/app/views/home/start.html.erb
+++ b/app/views/home/start.html.erb
@@ -1,10 +1,13 @@
 <!-- app/views/home/intro.html.erb -->
-
-<div class="intro">
-  <div>I h r L i e b e n </div>
-  <div>Wir freuen uns so sehr über Euer Kommen und mit Euch unsere Hochzeit zu feiern!
-    <br>Bitte meldet Euch jederzeit bei uns, wenn Ihr Fragen habt.
-    <br>Pfiat di und bis bald!
-    <br>Dani & Jacob
+<div class="home-start">
+  <div class="content">
+    <section>
+      <h1>Ihr Lieben</h1>
+      <p>Wir freuen uns so sehr über Euer Kommen und mit Euch unsere Hochzeit zu feiern!
+        Bitte meldet Euch jederzeit bei uns, wenn Ihr Fragen habt.
+        Pfiat di und bis bald!
+        Dani & Jacob
+      </p>
+    </section>
   </div>
 </div>
