--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <ul class="tabs-underlined list-inline">
   <li>
-    <%= link_to "start", root_path, class: active_class?(root_path) %>
+    <%= link_to "start", start_path, class: active_class?(start_path) %>
   </li>
   <li>
     <%= link_to "details", details_path, class: active_class?(details_path) %>
