--- a/app/assets/stylesheets/config/fonts.scss
+++ b/app/assets/stylesheets/config/fonts.scss
@@ -6,6 +6,20 @@
 }
 
 @font-face {
+  font-family: 'Garamond';
+  src: url(asset-path('fonts/Garamond-Bold.ttf')) format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Garamond';
+  src: url(asset-path('fonts/Garamond-Italic.ttf')) format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
   font-family: 'Futura';
   src: url(asset-path('Futura-Book.ttf')) format('truetype');
   font-weight: 300;
@@ -13,3 +27,4 @@
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Garamond:wght@400;700&family=Futura:wght@400&display=swap');
+
