--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -2,16 +2,53 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Garamond', serif;
+  font-family: 'Futura', serif;
   color: $color-primary;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  min-height: 200vh;
+  min-height: 100vh;
   text-align: center;
   padding-top: 20vh;
 }
 
+/* Stil für den gesamten Inhalt */
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  margin-top: 10vh;
+
+  width: 50%;
+  text-align: center;
+  line-hight: 2rem;
+
+  section {
+    margin-bottom: 5rem;
+  }
+
+  h1 {
+    font-family: 'Garamond', serif;
+  }
+
+  h2 {
+    font-family: 'Garamond', serif;
+    text-decoration: underline;
+    font-size: 1.1rem;
+  }
+
+  a {
+    font-family: 'Garamond', serif;
+    font-style: italic;
+  }
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+// home styles
 body.home-index {
   background: image-url('background.jpg') no-repeat center 40vh;
   background-size: contain;
@@ -34,14 +71,7 @@ body.home-index {
   }
 }
 
-/* Stil für den gesamten Inhalt */
 .content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1rem;
-  margin-top: 10vh;
-
   .coming-soon {
     font-family: 'Garamond', serif;
     font-size: 2rem;
@@ -125,3 +155,4 @@ body.home-index {
     }
   }
 }
+
