--- a/app/views/home/infos.html.erb
+++ b/app/views/home/infos.html.erb
@@ -1,1 +1,78 @@
-infos.html.erb
+<body class="home-infos">
+  <div class="infos-content">
+  <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+    <section>
+      <h1>A n r e i s e</h1>
+      <p>Falls ihr nicht mit dem Auto oder mit dem Zug anreist, gibt es Direktflüge mit der Airline Skyalps von Hamburg, Berlin, Düsseldorf und Kassel direkt nach Bozen:</p>
+      <br>
+      <a href="https://www.skyalps.com/de/" target="_blank">https://www.skyalps.com/de/</a>
+      <br>
+      <p>Entfernung mit dem Taxi/Auto vom Flughafen Bozen zum Ansitz Zinnenberg & Schloss Freudenstein: 12 km; 20 Minuten.</p>
+      <br>
+      <p>Weitere Flughäfen in der Umgebung:
+        <br>Innsbruck (135 km; 2 Std.)
+        <br>Verona (160 km; 1,5 - 2 Std.)
+        <br>München (320 km; 3,5 Std.)
+      </p>
+      <br>
+      <p>Bahnhof:
+        <br>Bozen (14 km; 20 Minuten)
+      </p>
+    </section>
+
+    <section>
+      <h1>U n t e r k ü n f t e</h1>
+      <h2>Eppan</h2>
+      <p><a href="http://www.hotel-schloss-korb.com" target="_blank">Hotel Schloss Korb</a></p>
+      <p><a href="http://www.christof.it" target="_blank">Hotel Christof</a></p>
+      <p><a href="http://www.ferien-suedtirol.com" target="_blank">Residence & Garden Hotel</a></p>
+      <p><a href="http://www.golfandcountry.it" target="_blank">The Lodge - Golfclub Eppan</a></p>
+      <p><a href="http://www.penegalblick.it" target="_blank">Pension Penegalblick</a> / <a href="http://www.steingarten.it">Steingarten</a></p>
+
+      <h2>St. Pauls</h2>
+      <p><a href="http://www.gutentropfen.com"target="_blank">B&B Zum guten Tropfen</a></p>
+      <p><a href="http://www.klauslentsch.com"target="_blank">Weingut Klaus Lentsch, Apartment Fuchslahn</a></p>
+      <p><a href="http://www.apartmentwieser.it"target="_blank">Apartment Wieser</a></p>
+
+      <h2>Kaltern</h2>
+      <p><a href="http://www.weisses-rössl-kaltern.com"target="_blank">Weißes Rössl</a></p>
+    </section>
+
+    <section>
+      <h1>S h u t t l e</h1>
+    </section>
+
+    <section>
+      <h1>K i n d e r</h1>
+      <p>Wir freuen uns über das Kommen Eurer Kinder am Samstag in die Kirche und zum Empfang! Am Freitag- und Samstagabend wird ein Raum im Ansitz Zinnenberg & Schloss Freudenstein für die Babys & Kinderwagen mit Betreuung zur Verfügung gestellt werden.</p>
+    </section>
+
+    <section>
+      <h1>R e d e n & B e i t r ä g e</h1>
+      <p>Für eventuelle Reden & Beiträge meldet Euch bitte bei:</p>
+      <p>Nikola Hertel<br>+49 17630464353<br><a href="mailto:nikolahertel@outlook.de">nikolahertel@outlook.de</a></p>
+    </section>
+
+    <section>
+      <h1>G e s c h e n k e t i s c h</h1>
+      <p>Euer Kommen ist unser größtes Geschenk. Solltet Ihr uns darüber hinaus eine Freude machen wollen, haben wir unter folgendem Link einen Hochzeitstisch zusammengestellt:</p>
+      <p><a href="http://www.danielajacob.de" target="_blank">www.danielajacob.de</a></p>
+    </section>
+
+    <section>
+      <h1>K o n t a k t e</h1>
+      <p>Sabine und Hubertus Luckner, Klosterhof 1, 25436 Uetersen</p>
+      <p>Martina Hoyer-Hertel, Straßweg 24, 22607 Hamburg</p>
+      <p>Peter Hertel, Elbchaussee 197, 22605 Hamburg</p>
+      <br>
+      <br>
+      <p>Daniela und Jacob Luckner, Danziger Straße 57, 10435 Berlin<br>Daniela +49 17680636231; Jacob +49 1741969090</p>
+      <br>
+      <br>
+      <p>Josefine Theden-Schow +49 1739212080; Josephine Stolberg +49 16093911444;</p>
+      <p>Nikola Hertel +49 17630464353; Pauline Dill +49 17631233737</p>
+      <p>Georg Oldenburg +49 17626110600; Jakob Below +49 15735805059</p>
+      <p>Jacob Bülow +49 1703444606; Robert Mangin +49 15142510654</p>
+    </section>
+  </div>
+</body>
