--- a/app/views/home/rsvp.html.erb
+++ b/app/views/home/rsvp.html.erb
@@ -1,1 +1,24 @@
-rsvp.html.erb
+<div class="home-rsvp">
+  <div class="rsvp-content">
+    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+    <section>
+      <h1>RSVP</h1>
+      <p>Um Antwort wird gebeten bis zum 24. August 2024 an:</p>
+      <br>
+      <p><a href="mailto:danielaundjacob@gmail.com">danielaundjacob@gmail.com</a></p>
+      <br>
+      <p>Bitte teilt uns folgende Informationen mit:</p>
+      <br>
+      <ul>
+        <li>Zu- oder Absage</li>
+        <li>Anzahl Kinder</li>
+        <li>Unterkunft</li>
+        <li>Vegan/ Vegetarisch</li>
+      </ul>
+      <br>
+      <p>Bei weiteren Fragen meldet Euch gerne telefonisch bei uns:</p>
+      <br>
+      <p>Dani: +49 17680636231<br>Jacob: +49 1741969090</p>
+    </section>
+  </div>
+</div>
